- Fixed issue with the team.yaml file being reset - Credit booksaw

Code improvements:
- Many instances of code refactoring and improvement and re-formatting - Credit svaningelgem
- Refactored code to make use of Lombok to avoid boilerplate code - Credit svaningelgem
- Automated dependency updating - Credit svaningelgem
- Replacement of Caffeine dependency with custom implementation to reduce filesize - Credit svaningelgem

4.13.0

Features:
- Added [minimessage](https://docs.advntr.dev/minimessage/index.html) support (#748) - Credit gaboss44
- Added /team anchor, a feature that allows players to respawn at their team's home location if they desire (#738) - Credit gaboss44

Improvements:
- Added configuration so team name can be shown in the team create message (#750)
- Added ability to configure a cache invalidation timer (#742)
- Added configuration option for SQL parameters (#763)

Bug Fixes:
- Major optimisation of the chest management module of BetterTeams, this should provide a significant performance improvement (#768, #689) - Credit RVSkeLe
- Fixed a bug causing discord webhook messages to be sent twice (#757) - Credit svaningelgem
- Fixed a NullPointerException in that could be triggered in the /team info command (#751, #749)- Credit Ceymikey
- Updated support for UltimateClaims to support 3.0.0+ only (#766)
- Hopefully fixed bug where a world that is not loaded throws errors (#760)

4.13.1

Bug Fixes:
- Fixed bug with /team create if placeholderAPI was not installed on the server

4.13.2:

Bug Fixes:
- Fixed a NoClassDefFound error if using paper below 1.21.4 (#783) - Credit gaboss44
- Fixed a bug with /team setowner where a team could have no owner

4.14.0:

Improvements:
- Added %betterteams_hashome%` placeholder (#693)
- Added %betterteams_teamchat%` placeholder (#795)

Bug Fixes:
- Restored behaviour when if a tag is not set, the display name is used

Headings:
Features:

Improvements:

Bug Fixes: 
